# Statistics-UCU

./: README.md  pyproject.toml
data/: ceo.xls
hw1/: task1.ipynb  task2.ipynb  task3.ipynb
hw2/: task4.ipynb
