[tool.poetry]
name = "stat-ucu"
version = "0.1.0"
description = "Packages for Statistics-UCU"
authors = ["Ivan Havlytskyi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
numpy = "^1.26.0"
scipy = "^1.11.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.8.0"
ipykernel = "^7.0.1"
pandas = "^2.3.3"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
xlrd = "^2.0.2"
yfinance = "^0.2.66"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"